refractor: remove comment on index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         MATERI #1 
         Text, Tag heading, Tag break, comment code
     -->
-    <!-- Halo Dunia
+    Halo Dunia
 
     <h1>Halo Dunia</h1>
     <h2>Halo Dunia</h2>
@@ -22,20 +22,20 @@
     <h5>Halo Dunia</h5>
     <h6>Halo Dunia</h6>
 
-    Halo Dunia, <br> Selamat Pagi -->
+    Halo Dunia, <br> Selamat Pagi
 
 
     <!-- 
         MATERI #2 
         bold, italic, underline, strike, small, subscript, superscript
     -->
-    <!-- Halo <b>Dunia</b> <br>
+    Halo <b>Dunia</b> <br>
     Halo <i>Dunia</i> <br>
     Halo <u>Dunia</u> <br>
 
     Halo <strike>Dunia</strike> <br>
     Halo <sub>Dunia</sub> <br>
-    Halo <sup>Dunia</sup> <br> -->
+    Halo <sup>Dunia</sup> <br>
 
 
 
@@ -43,8 +43,8 @@
         MATERI #3 
         anchor dan image
     -->
-    <!-- <a href="https://www.youtube.com/">Menuju Youtube</a> <br>
-    <img src="https://images.template.net/79088/Free-Single-Person-Vector-1.jpg" alt="Foto Seseorang"> -->
+    <a href="https://www.youtube.com/">Menuju Youtube</a> <br>
+    <img src="https://images.template.net/79088/Free-Single-Person-Vector-1.jpg" alt="Foto Seseorang">
 
     
 
@@ -52,21 +52,21 @@
         MATERI #4
         Tag progress, marquee, dan input
     -->
-    <!-- <progress></progress> <br>
+    <progress></progress> <br>
     <marquee behavior="" direction="">Halo Dunia</marquee> <br>
     <input type="text"> <br>
     <input type="password"> <br>
     <input type="color"> <br>
     <input type="date"> <br>
-    <input type="file"> <br> -->
+    <input type="file"> <br>
 
     <!-- 
         MATERI #5
         Embed youtube video dan Embed google map
     -->
-    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/bcHIwuUd9cs?si=hwP_iNVfi5lkrlz3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bcHIwuUd9cs?si=hwP_iNVfi5lkrlz3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.0603230886463!2d112.7601072750478!3d-7.347123392661623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e5adfb3b3741%3A0x86aa183e442503d5!2sSMK%20DARMA%20SISWA%201%20SIDOARJO!5e0!3m2!1sid!2sid!4v1701174797979!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.0603230886463!2d112.7601072750478!3d-7.347123392661623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e5adfb3b3741%3A0x86aa183e442503d5!2sSMK%20DARMA%20SISWA%201%20SIDOARJO!5e0!3m2!1sid!2sid!4v1701174797979!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </body>
 
